--- a/bd-de-rechupe/android/app/src/main/res/values/strings.xml
+++ b/bd-de-rechupe/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">BD De Rechupe</string>
     <string name="title_activity_main">BD De Rechupe</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">com.bdderechupe</string>
+    <string name="custom_url_scheme">com.bdderechupe</string>
 </resources>
